    - Disable upstream tar signature when building format 1.0 source packages
      in Dpkg::Source::Package::V1, as the current stable dpkg series do not
      support extracting them.
    - Preset Last-Update field in patch header template with current time in
      Dpkg::Source::Package::V2. Thanks to Daniel Shahaf <danielsh@apache.org>.
      Closes: #828146
  * Build system:
    - Stop allowing to set deprecated bzip2 compressor as dpkg-deb default.
  * Test suite:
    - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
      to 99999.
    - Add new pod-spell unit test.
    - Refactor common unit test checks for needed things into Test::Dpkg.
    - Accept perl's Lancaster Consensus AUTHOR_TESTING variable.
    - Add new minimum perl version unit test.
    - Add new synopsis unit test.
    - Add unit tests for dependency simplification with build profiles.
  * Documentation:
    - Improve dpkg-buildpackage(1) on environment expectations.
    - Clarify the format of the db:Status-Abbrev virtual field in
      dpkg-query(1). Closes: #824515
    - Document the tar entry size limitation for deb(5) format.
    - Document interaction between PIE and libraries in dpkg-buildflags(1).
      Based on text by Christian Seiler <christian@iwakd.de>.
    - Merge ENVIRONMENT sections in dpkg-buildflags(1).
    - Document various long options in dpkg-source --help output.
    - Move dpkg-source -q option from “Build options” to “General options”
      section in --help output.
    - Clarify shared library search order in dpkg-shlibdeps(1).
    - Remove most remaining AUTHOR sections from man an POD, as they are
      strongly discouraged, for being redundant, tending to get out-of-sync,
      and their format being inconsistent. In addition most got already
      removed in the past for the man pages.
    - Mark perlcritic as an optional author test dependency in the README.
    - Fix example code in Dpkg::Compression::FileHandle SYNOPSIS.
