@@ -66,6 +66,7 @@ The minimum software required to configure and build dpkg from a tarball is:
 
 To enable optional functionality or programs, this software might be needed:
 
+  libmd (used by libdpkg, currently falling back to embedded code)
   zlib (used instead of gzip command-line tool)
   xz's liblzma (used instead of xz command-line tool)
   libbzip2 (used instead of bzip2 command-line tool)
