@@ -59,6 +59,7 @@ build-tree/config.status: configure
 		--sbindir=/sbin \
 		--localstatedir=/var \
 		--with-devlibdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
+		--without-libmd \
 		--with-zlib \
 		--with-liblzma \
 		--with-bz2
