@@ -82,8 +82,11 @@ dpkg (1.18.8) UNRELEASED; urgency=medium
     - Preset Last-Update field in patch header template with current time in
       Dpkg::Source::Package::V2. Thanks to Daniel Shahaf <danielsh@apache.org>.
       Closes: #828146
+  * Packaging:
+    - Disable libmd usage in Debian and derivatives for now.
   * Build system:
     - Stop allowing to set deprecated bzip2 compressor as dpkg-deb default.
+    - Use libmd automatically if available.
   * Test suite:
     - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
       to 99999.
